<resources>
    <string name="app_name">ОМГТУ Расписание</string>
    <string name="should_not_be_empty">поле должно быть заполнено</string>
    <string name="first_name">Имя</string>
    <string name="last_name">Фамилия</string>
    <string name="phone">Телефон</string>
    <string name="e_mail">Login</string>
    <string name="password">Пароль</string>
    <string name="password_confirmation">Password Confirmation</string>
    <string name="register">Register</string>
    <string name="login">LOGIN</string>
    <string name="network_error">Ошибка сети</string>
    <string name="success">Успешно</string>
    <string name="password_not_match">Password and confirmation don\'t match</string>
    <string name="invalid_email">Неверный login</string>
    <string name="invalid_credentials">Неверные учётные данные</string>
    <string name="confirm">ПОДТВЕРДИТЬ</string>
    <string name="enter_key1">Enter Key from e-mail</string>
    <string name="logged_out">Logged out</string>
    <string name="log_out_alert">Вы уверены, что хотите выйти из аккаунта?</string>
    <string name="already_logged_in">You\'re already logged in. Please, logout first.</string>
    <string name="logout">Выйти</string>
    <string name="please_login">Please, login</string>
    <string name="profile">Profile</string>
    <string name="currencies">Currencies</string>
    <string name="new_table">Новая</string>
    <string name="open_table">Открыта</string>
    <string name="closed_table">Закрыта</string>
    <string name="balance_received">Received:</string>
    <string name="balance_spent">Spent:</string>
    <string name="title_activity_transactions">Transactions</string>
    <string name="transactions_details">Transactions details</string>
    <string name="tab_text_1">Receive</string>
    <string name="tab_text_2">Send</string>
    <string name="tab_text_3">History</string>
    <string name="action_settings">Settings</string>
    <string name="section_format">Hello World from section: %1$d</string>
    <string name="copied">Copied!</string>
    <string name="recepient_s_address">Recepient\'s address</string>
    <string name="amount">Amount</string>
    <string name="amount_usd">Amount ($)</string>
    <string name="empty_recipient">Recipient\'s address can not be empty</string>
    <string name="incorrect_amount">Incorrect amount</string>
    <string name="amount_zero">Amount can not be zero</string>
    <string name="not_enough_money">Not enough money</string>
    <string name="send_money_request">Are you sure that you want to send this amount?</string>
    <string name="add_address_request">Are you sure that you want to add new address?</string>
    <string name="send">Send</string>
    <string name="add">Add</string>
    <string name="qr_scan">QR Scan</string>
    <string name="mney_logo">Mney Logo</string>
    <string name="incorrect_link">Incorrect link</string>
    <string name="id">ID</string>
    <string name="confirmations">Confirmations</string>
    <string name="account">Account</string>
    <string name="address">Address</string>
    <string name="category">Category</string>
    <string name="copy">Copy</string>
    <string name="time">Time</string>
    <string name="title_activity_groups">Ведомости</string>
    <string name="title_activity_table">Таблица успеваемости</string>
    <string name="title_activity_sign">Распишитесь</string>
    <string name="total_hours">Часы</string>
    <string name="percent">%</string>
    <string name="rating">Рейтинг</string>
    <string name="sending">Отправка данных…</string>
    <string name="sent">Данные отправлены…</string>
    <string name="action_clear">Очистить</string>
    <string name="action_black">Чёрный цвет</string>
    <string name="action_blue">Голубой цвет</string>
    <string name="action_red">Красный цвет</string>
    <string name="action_green">Зелёный цвет</string>
    <string name="action_save">Сохранить в качестве изображения</string>
    <string name="action_finish">Закончить</string>
    <string name="set_line_width">Установить толщину линии</string>
    <string name="no_signature_detected">Не обнаружено подписи.</string>
    <string name="image_saved_at">Изображение сохранено в:</string>
    <string name="cancel">Отмена</string>
</resources>
